model Cart {
  id              String    @id @default(cuid())
  user_id         String    @unique
  user            User      @relation(fields: [user_id], references: [id])
  quantity        Int       @default(1)
  delivery_fee    Int
  tax             Int
  item_count      Int
  sub_total_price Int
  total_discount  Int
  total_price     Int
  total_weight    Int
  currency        Currency
  note            String?
  tenant_id       String
  tenant          Tenant    @relation(fields: [tenant_id], references: [id], onDelete: Cascade)
  created_at      DateTime  @default(now())
  updated_at      DateTime  @updatedAt
  product         Product[]
  order           Order?

  @@index([tenant_id], type: Hash)
  @@map("cart")
}
