model Product {
  id                  String           @id @default(cuid())
  name                String           @db.VarChar(255)
  slug                String           @unique @db.VarChar(255)
  sku                 String           @unique @db.VarChar(255)
  options             Json?
  description         String?
  feature_image       String
  images              Json
  price               Int
  price_max           Int
  price_min           Int
  cost                Int
  profit              Int
  vendor_id           String
  vendor              Vendor           @relation(fields: [vendor_id], references: [id])
  category_id         String
  category            Category         @relation(fields: [category_id], references: [id])
  stock               Int              @default(0)
  is_available        Boolean          @default(true)
  weight              Int
  weight_unit         Weight
  discount_type       Discount
  discount_amount     Int              @default(0)
  discount_start_date DateTime?
  discount_end_date   DateTime?
  published_at        DateTime
  created_at          DateTime         @default(now())
  updated_at          DateTime         @default(now())
  product_variant     ProductVariant[]
  cart_id             String
  cart                Cart             @relation(fields: [cart_id], references: [id])
  wishlist            Wishlist[]
  order_item          OrderItems[]
  tenant_id           String
  tenant              Tenant           @relation(fields: [tenant_id], references: [id], onDelete: Cascade)

  @@index([tenant_id], type: Hash)
  @@map("product")
}

model ProductVariant {
  id            String   @id @default(cuid())
  name          String   @db.VarChar(255)
  product_id    String
  product       Product  @relation(fields: [product_id], references: [id], onDelete: Cascade)
  options       Json
  feature_image Json
  sku           String   @unique @db.VarChar(255)
  price         Int
  cost          Int
  profit        Int
  is_available  Boolean  @default(true)
  weight        Int      @default(0)
  created_at    DateTime @default(now())
  updated_at    DateTime @updatedAt

  @@map("product_variant")
}

enum Weight {
  kg
  g
  lbs
}

enum Discount {
  percentage
  kyats
}
