model User {
  id           String         @id @default(cuid())
  username     String         @db.VarChar(255)
  phone        String         @unique @db.VarChar(15)
  password     String         @db.VarChar(255)
  email        String?        @unique @db.VarChar(255)
  address      String
  city         String         @db.VarChar(255)
  township     String         @db.VarChar(255)
  updated_at   DateTime       @updatedAt
  created_at   DateTime       @default(now())
  cart         Cart?
  order        Order[]
  wishlist     Wishlist[]
  notification Notification[]
  tenant_id    String
  tenant       Tenant         @relation(fields: [tenant_id], references: [id], onDelete: Cascade)

  @@index([tenant_id], type: Hash)
  @@map("user")
}
