model Vendor {
  id              String    @id @default(cuid())
  name            String    @db.VarChar(255)
  slug            String    @unique @db.VarChar(255)
  banner_image    Json
  thumbnail_image Json
  description     String
  created_at      DateTime  @default(now())
  updated_at      DateTime  @updatedAt
  product         Product[]
  tenant_id       String
  tenant          Tenant    @relation(fields: [tenant_id], references: [id], onDelete: Cascade)

  @@index([tenant_id], type: Hash)
  @@map("vendor")
}
