model Wishlist {
  id         String    @id @default(cuid())
  user_id    String
  user       User      @relation(fields: [user_id], references: [id])
  product    Product[]
  created_at DateTime  @default(now())
  updated_at DateTime  @updatedAt
  tenant_id  String
  tenant     Tenant    @relation(fields: [tenant_id], references: [id], onDelete: Cascade)

  @@index([tenant_id], type: Hash)
  @@map("wishlist")
}
