Project "Ecommerce Platform" {
  database_type: 'PostgreSQL'
  Note: '''
    Scale Smart & Sell More
  '''
}

Table tenant {
  id varchar [pk, unique, not null]
  name varchar(255) [not null]
  domain varchar(255) [unique]
  phone varchar(20) 
  email varchar(255) [unique]
  metadata json
  is_active boolean [default: false]
  created_at timestamp [default: `now()`]

  Note: '''
    The 'metadata' field is a JSON type and stores an object.\n
    It can represent any data type that is specific to the tenant's customization needs.
    For example: 'logo', 'theme', 'policy', etc...
  '''
}

Table admin {
  id varchar [pk, unique, not null]
  username varchar(255) [not null]
  email varchar(255) [unique]
  phone varchar(20) [not null]
  password varchar [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]
}

Table user {
  id varchar [pk, unique, not null]
  name varchar(255) [not null]
  phone varchar(20) [not null]
  email varchar(255) [unique]
  address text
  city varchar(255) [not null]
  township varchar(255) [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]
}

Table wishlist {
  id varchar [pk, unique, not null]
  product_id varchar [ref: <> tenant.product.id]
  user_id varchar [ref: > tenant.user.id]
  created_at timestamp [default: `now()`]
  deleted_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]
}

Table vendor {
  id varchar [pk, unique]
  name varchar(255) [not null]
  slug varchar(255) [unique, not null]
  banner_image json
  thumbnail_image json
  description textqq
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]
}

Table category {
  id varchar [pk, unique, not null]
  name varchar(255) [not null]
  slug varchar(255) [unique, not null]
  description text
  banner_image json 
  thumbnail_image json 
  parent_id varchar [null, ref: > tenant.category.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]

  Note: '''
    This table is self-referencing, enabling a hierarchical structure for categories.\n
    Main Category: A record is considered a main category if 'parent_id' is NULL.\n
    Sub Category: A record is considered a sub-category if 'parent_id' references an existing
    category 'id'. 
  '''
}

Table product {
  id varchar [pk, unique, not null]
  name varchar(255) [not null]
  slug varchar(255) [unique, not null]
  sku varchar(255) [unique, not null]
  options json
  description text
  feature_image varchar [not null]
  images json [not null]
  price integer [not null]
  price_max integer [not null]
  price_min integer [not null]
  cost integer [not null]
  profit integer [not null]
  vendor_id varchar [not null, ref: > tenant.vendor.id]
  category_id varchar [not null, ref: > tenant.category.id]
  stock integer [default: 0]
  is_available boolean [default: true]
  weight integer [default: 0]
  weight_unit weight
  discount_start_date timestamp [null]
  discount_end_date timestamp [null]
  discount_amount integer [null, default: 0]
  discount_type discount [null]
  published_at timestamp [default: `now()`]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]

  Note: '''
    The 'options' field is a JSON type and stores an array of objects.\n
    Each object in the array has the following structure: 
    'name': A string representing the name of the option (e.g., 'Size' or 'Color').\n- 
    'position': An integer denoting the position of the option for sorting purposes.\n- 
    'values': An array of strings that represents possible values for the option (e.g., ['Small', 'Medium', 'Large'] for size).
  '''
}

Table product_variant {
  id varchar [pk, unique, not null]
  product_id varchar [not null, ref: > tenant.product.id]
  name varchar(255) [not null]
  options json
  feature_image json
  sku varchar [unique, not null]
  price integer [not null]
  cost integer  [not null]
  profit integer [not null]
  is_available boolean [default: true]
  weight integer [default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]

  Note: '''
    The 'options' field in the 'product_variant' table is of type JSON and 
    stores an array representing specific choices selected from the main product's available options.\n
    Each variant's options array corresponds to a unique combination, such as ['Natural Titanium', '256GB'], 
    drawn from the 'options' field in the associated 'product' table.
  '''
}

Table cart {
  id varchar [pk, unique, not null]
  user_id varchar [not null, ref: - tenant.user.id]
  product_id varchar [not null, ref: < tenant.product.id]
  quantity smallint [not null, default: 1]
  delivery_fee integer [not null]
  tax integer [not null]
  item_count integer [not null]
  sub_total_price integer [not null]
  total_discount integer [not null]
  total_price integer [not null]
  total_weight integer [not null, default: 0]
  currency currency
  note text
  created_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]

  Note: '''
    sub_total_price represents the total price of all items in the cart 
    before any additional fees such as total_discount, delivery_fee, tax.\n
    total_price = sub_total_price - total_discount + delivery_fee + tax
  '''
}

Table order {
  id varchar [pk, unique, not null]
  order_no bigint [unique, not null]
  user_id varchar [not null, ref: > tenant.user.id]
  cart_id varchar [not null, ref: - tenant.cart.id] 
  delivery_fee integer [not null]
  tax integer [not null]
  item_count integer [not null]
  sub_total_price integer [not null]
  total_discount integer [not null]
  total_price integer [not null]
  total_weight integer [not null, default: 0]
  status order_status
  note text 
  payment payment_method
  currency currency
  invoice_id varchar [not null, ref: - tenant.invoice.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]
}

Table order_items {
  id varchar [pk, unique, not null]
  order_id varchar [not null, ref: > tenant.order.id]
  product_id varchar [not null, ref: > tenant.product.id]
  quantity smallint [not null]
  price integer [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]
}

Table invoice {
  id varchar [pk, unique, not null]
  order_id varchar [not null, ref: - tenant.order.id]
  invoice_number varchar [unique, not null]
  shop_name varchar(255) [not null]
  location varchar(255) [not null] 
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]
}

Table payment {
  id varchar [pk, unique, not null]
  total_amount int 
  payment_date datetime
  payment_status payment_status
  payment_method payment_method 
  transaction_id varchar(255) [unique, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]
}

Table notification {
  id varchar [pk, unique, not null]
  message varchar [not null]
  type notification_type
  status notification_status [default: 'unread']
  user_id [ref: > user.id]
  admin_id [ref: > admin.id]
  tenant_id varchar [ref: > tenant.id]
  recipient_type recipient_type
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table feature_flags {
  id varchar [pk, unique, not null]
  name varchar(255)
  is_enabled boolean [default: false]
  tenant_id varchar [ref: <> tenant.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table system_config {
  id varchar [pk, unique, not null]
  delivery_options json
  tax_rate numeric(5, 2) [not null, default: 0.00]
  currency varchar(10) [default: 'MMK']
  banner_image json
  ads_image json
  shopping_hours json
  pickup_available boolean [default: false]
  maintenance_mode boolean [default: false]
  contact_email varchar(255)
  contact_phone varchar(20)
  social_links json
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  tenant_id varchar [ref: > tenant.id]
}

Enum notification_status {
  read
  unread
  archive
}

Enum notification_type {
  order_confirmation
  order_shipped
  order_delivered
  order_canceled
  new_order_received
  out_of_stock
  low_stock_alert
  new_promotion
  discount_expiry_alert
  payment_confirmation
  payment_failed
  password_change_confirmation
  system_maintenance_alert
  feature_updates
  policy_updates
}

Enum recipient_type {
  user
  admin
}

Enum weight {
  kg
  g
  lbs
}

Enum discount {
  percentage
  kyats
}

Enum order_status {
  pending
  confirmed
  packaging
  delivered
  cancelled
}

Enum payment_method {
  AYAPAY
  WAVEPAY
  KBZPAY
}

Enum payment_status {
  pending
  completed
  failed
}

Enum currency {
  MMK
}